# JD-Compare-AI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: chat.py  jd_sets.py  labels.py  router.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chat_session.py  jd_item.py  jd_set.py  user.py
backend/app/schemas/: chat.py  jd_set.py  label.py
backend/app/services/: label_extractor.py
backend/app/services/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py  prompt_builder.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatPanel.tsx  StreamingIndicator.tsx
frontend/src/components/jd/: JDAddButton.tsx  JDCard.tsx  JDCardList.tsx  JDLabel.tsx
frontend/src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/workspace/: WorkspaceSelector.tsx
frontend/src/hooks/: useAutoLabel.ts  useAutoSave.ts  useChat.ts
frontend/src/lib/: api.ts  constants.ts  stream.ts  workspace.ts
frontend/src/stores/: chatStore.ts  jdStore.ts  themeStore.ts
frontend/src/types/: api.ts  chat.ts  jd.ts  workspace.ts
